Наведение порядка в культурах растений

--- a/Bonfire/Views/SeedsWindow.xaml
+++ b/Bonfire/Views/SeedsWindow.xaml
@@ -41,9 +41,7 @@
                               ColumnHeaderStyle="{StaticResource CenterGridHeaderStyle}"
                               SelectedItem="{Binding SelectedItem}" Grid.ColumnSpan="3" HorizontalAlignment="Center"
                               EnableColumnVirtualization="True"
-                              EnableRowVirtualization="True"
-                              >
-
+                              EnableRowVirtualization="True">
             
             <DataGrid.Columns >
                 <DataGridTextColumn Header="Культура" Binding="{Binding Culture}" Width="150"/>
@@ -61,7 +59,7 @@
                             HorizontalAlignment="Left"
                             Margin="20,0,0,0" ToolTip="Овощи"
                             Background="Azure"
-                            Command="{Binding SeedsChoiceCommand}" CommandParameter="Культура 1" Grid.ColumnSpan="2">
+                            Command="{Binding SeedsChoiceCommand}" CommandParameter="Овощи" Grid.ColumnSpan="2">
             <Image Source="/Views/Image/Vegetables 7.jpg" ></Image>
         </Button>
         <Button Grid.Row="0" Grid.Column="1" Width="40"
@@ -69,7 +67,7 @@
                             Margin="22,0,0,0"
                             ToolTip="Фрукты"
                             Background="Azure"
-                            Command="{Binding SeedsChoiceCommand}">
+                            Command="{Binding SeedsChoiceCommand}" CommandParameter="Фрукты">
             <Image Source="/Views/Image/Fruit 1.jpg" ></Image>
         </Button>
         <Button Grid.Row="0" Grid.Column="1" Width="40"
@@ -77,7 +75,7 @@
                             Margin="82,0,0,0"
                             ToolTip="Ягоды"
                             Background="Azure"
-                            Command="{Binding SeedsChoiceCommand}" Grid.ColumnSpan="2">
+                            Command="{Binding SeedsChoiceCommand}" CommandParameter="Ягоды" Grid.ColumnSpan="2">
             <Image Source="/Views/Image/Berry 2.jpg"></Image>
         </Button>
         <Button Grid.Row="0" Grid.Column="2" Width="40"
@@ -85,7 +83,7 @@
                             Margin="30,0,0,0"
                             ToolTip="Зелень"
                             Background="Azure"
-                            Command="{Binding SeedsChoiceCommand}">
+                            Command="{Binding SeedsChoiceCommand}"  CommandParameter="Зелень">
             <Image  Source="/Views/Image/Herb 2.jpg"></Image>
         </Button>
         <Button Grid.Row="0" Grid.Column="2" Width="40"
@@ -93,7 +91,7 @@
                             Margin="90,0,0,0"
                             ToolTip="Цветы"
                             Background="Azure"
-                            Command="{Binding SeedsChoiceCommand}">
+                            Command="{Binding SeedsChoiceCommand}" CommandParameter="Цветы">
             <Image Source="/Views/Image/Flower 4.jpg" ></Image>
         </Button>
         <Button Grid.Row="0" Grid.Column="2" Width="40"
