--- a/Bonfire/Views/SeedsWindow.xaml
+++ b/Bonfire/Views/SeedsWindow.xaml
@@ -101,10 +101,7 @@
             <Image Source="/Views/Image/All.jpg"></Image>
 
         </Button>
-        <!--<TextBox Grid.Row="0" Grid.Column="2" Margin="210,5,0,5"
-                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  Width="300" HorizontalAlignment="Left" Height="30" Text="{Binding SeedFilter, UpdateSourceTrigger=PropertyChanged}"
-                  ></TextBox>-->
+        
         <ComboBox Grid.Row="0" Grid.Column="2" Margin="210,5,0,5"
                               HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                               Width="300" HorizontalAlignment="Left" Height="30" SelectedItem="{Binding SeedFilter}"
@@ -137,7 +134,7 @@
         <ComboBox Grid.Row="3" Grid.Column="2" Margin="160,70,0,0"
                               Width="150" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
                               HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="12" IsEditable="True" StaysOpenOnEdit="True"  
-                              ItemsSource="{Binding ListCulture}"
+                              ItemsSource="{Binding AddCultureList}"
                               Text="{Binding AddCulture }"></ComboBox>
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="334,40,0,0"
                                Width="150" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" TextAlignment="Center" Text="Сорт"></TextBlock>
