--- a/Bonfire/Views/SeedsWindow.xaml
+++ b/Bonfire/Views/SeedsWindow.xaml
@@ -136,12 +136,19 @@
                                Width="150" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" TextAlignment="Center" Text="Культура"></TextBlock>
         <ComboBox Grid.Row="3" Grid.Column="2" Margin="160,70,0,0"
                               Width="150" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
-                              HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="12" IsEditable="True" StaysOpenOnEdit="True" 
-                              DataContext="{Binding SeedsView}"
-                              ItemsSource="{Binding Culture}"
-                              Text="{Binding AddCulture,
-                                                                RelativeSource={RelativeSource Mode=FindAncestor, 
-                                                                 AncestorType={x:Type vm:SeedsViewModel}}}">
+                              HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="12" IsEditable="True" StaysOpenOnEdit="True"
+                              ItemsSource="{Binding CultureListView}"
+                              Text="{Binding AddCulture}"
+                              >
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <DataGrid >
+                            <DataGridComboBoxColumn ItemsSource="{Binding ElementName=NameProperty}"></DataGridComboBoxColumn>
+                        </DataGrid>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
             <!--<ComboBox.Text>
                 <Binding Path="AddCulture">
                     <Binding.RelativeSource>
@@ -150,6 +157,7 @@
                 </Binding>
             </ComboBox.Text>-->
         </ComboBox>
+         
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="334,40,0,0"
                                Width="150" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" TextAlignment="Center" Text="Сорт"></TextBlock>
         <ComboBox Grid.Row="3" Grid.Column="2" Margin="340,70,0,0"
